--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,10 @@ project(":core") {
 
         implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.16.1'
         implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.16.1'
+        implementation 'org.reflections:reflections:0.10.2'
+        implementation 'org.apache.logging.log4j:log4j-api:2.23.0'
+        implementation 'org.apache.logging.log4j:log4j-core:2.23.0'
+        implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.23.0'
     }
 }
 
